[package]
name = "wad-gfx"
description = "Extract graphics assets from doom.wad"
version = "0.1.3"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/maghoff/wad-gfx"

[dependencies]
wad = "0.2.0"
structopt = "0.2.14"
png = "0.14.0"
ndarray = "0.12.1"
